# Esp32Cam

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  README.md  README_RU.md  platformio.ini  sdkconfig  sdkconfig.old
components/OV2640/: CMakeLists.txt  CameraLock.cpp  CameraLock.hpp  Image.cpp  Image.hpp  Kconfig.projbuild  Ov2640.cpp  Ov2640.hpp  ov2640.cpp  ov2640.hpp
components/OV2640/driver/: camera.c  twi.c
components/avilib/: CMakeLists.txt  avilib.c
components/buffered_file_transfer/: CMakeLists.txt  Kconfig.projbuild  README.md
components/buffered_file_transfer/buffered_file_transfer/: BufferedFileTransfer.cpp  BufferedFileTransfer.hpp  BufferedFileTranslfer.hpp  Sub.hpp  buffered_file_transfer.cpp  buffered_file_transfer.hpp
components/buffered_file_transfer/buffered_file_transfer/process/: FileSystemTransferImplementor.cpp  FileSystemTransferImplementor.hpp  FlashMemoryTransferImplementor.cpp  FlashMemoryTransferImplementor.hpp  HttpFetch.cpp  HttpFetch.hpp  SaluteFlashMemoryTransferImplementor.cpp  SaluteFlashMemoryTransferImplementor.hpp  TransferImplementor.cpp  TransferImplementor.hpp
components/buffered_file_transfer/buffered_file_transfer/storage/: File.cpp  File.hpp  FileSystem.hpp  FlashMemoryPartitionTable.hpp  FlushingBufferFileSystem.cpp  FlushingBufferFileSystem.hpp  MemoryPartitionTable.hpp  SaluteFlashMemoryPartitionTable.cpp  SaluteFlashMemoryPartitionTable.hpp  SingleBufferRamFileSystem.cpp  SingleBufferRamFileSystem.hpp
components/buffered_file_transfer/buffered_file_transfer/test/: HttpFetchTest.cpp  HttpFetchTest.hpp  WifiPreconnectHttpFetchTest.cpp  WifiPreconnectHttpFetchTest.hpp
components/cam/: CMakeLists.txt  Camera.cpp  Frame.cpp  Kconfig.projbuild  README.md  cam.cpp
components/camera_recorder/: CMakeLists.txt  Kconfig.projbuild  RecFrame.cpp  RecMjpgAvi.cpp  Record.cpp  Recorder.cpp  Storage.cpp  Video.cpp  camera_recorder.cpp  camera_recorder.h
components/camera_streamer/: CMakeLists.txt  CameraStream.cpp  CameraStream.hpp  CameraStreamControl.cpp  CameraStreamControl.hpp  CameraStreamControls.cpp_del  CameraStreamTcpControl.cpp  README  (+11 more)
components/etl/libetl/: CMakeLists.txt
components/http/: CMakeLists.txt  Kconfig.projbuild  http.c  http.h
components/http/client/: file.cpp  file.h
components/http/http/: utility.c  utility.h
components/http/http/client/: file.cpp  file.h
components/http/pages/: camera.cpp  camera_demo.cpp  camerademo.c  camerademo.cpp  control.cpp  fw.cpp  fwupload.cpp  index.c  pages.h  version.cpp
components/http/resources/: upload_script.html
components/lib/mavlink/: CMakeLists.txt
components/lib/mosse/: CMakeLists.txt
components/lib/ov2640/ov2640/: CMakeLists.txt  Kconfig.projbuild
components/lib/ov2640/ov2640/driver/: camera.c
components/lib/ov2640/ov2640/driver/include/: esp_camera.h
components/lib/rr/: CMakeLists.txt
components/mav/: CMakeLists.txt  Dispatcher.cpp  Globals.cpp  Kconfig.projbuild  Marshalling.cpp  Unmarshalling.cpp  mav.cpp
components/mav/Helper/: CameraImageCaptured.cpp  MavlinkCommandAck.cpp  MavlinkCommandLong.cpp
components/mav/Microservice/: Camera.cpp  GsNetwork.cpp
components/mav/include/mav/: mav.hpp
components/mav/priv_include/: DelayedMavlinkMessageInitialization.hpp  DelayedSend.hpp  Dispatcher.cpp  Dispatcher.hpp  Globals.hpp  Marshalling.hpp  Mavlink.hpp  Microservice.hpp  Unmarshalling.cpp  Unmarshalling.hpp
components/mav/priv_include/Helper/: CameraImageCaptured.cpp  CameraImageCaptured.hpp  Common.hpp  FileTransferProtocol.hpp  MavlinkCommandAck.cpp  MavlinkCommandAck.hpp  MavlinkCommandLong.cpp  MavlinkCommandLong.hpp  WifiConfigAp.cpp  WifiConfigAp.hpp
components/mav/priv_include/Microservice/: Aggregate.hpp  Aggregate.impl  ApVer.cpp  ApVer.hpp  BftFtpClient.cpp  BftFtpClient.hpp  BufferedFileTransfer.cpp  BufferedFileTransfer.hpp  Camera.cpp  Camera.hpp  FtpClient.cpp  FtpClient.hpp  GsNetwork.cpp  GsNetwork.hpp  GsNetwork.impl  Tracking.cpp  Tracking.hpp  Wifi.cpp  Wifi.hpp
components/mav/priv_include/Microservice/Ftp/: Types.hpp
components/mavlink/: CMakeLists.txt
components/rtsp/: CMakeLists.txt  Kconfig.projbuild  RtpPacketSource.hpp  RtpPacketSourceCamera.cpp  RtpPacketSourceCamera.hpp  RtpPacketSourceFactory.cpp  RtpPacketSourceFactory.hpp  RtpServer.cpp  RtpServer.hpp  RtspConnection.cpp  RtspConnection.hpp  RtspParser.cpp  RtspParser.hpp  RtspRequestHandler.cpp  RtspRequestHandler.hpp  RtspServer.cpp  RtspServer.hpp  Server.hpp  Types.hpp  rtsp.cpp  rtsp.h
components/rtsp/request_parser/: clean.sh  debugbuild.sh  generate.sh  rtsp.l  rtsp.y
components/rtsp/rtp/: RtpServer.cpp  RtpServer.hpp
components/rtsp/rtp_packet/: RtpPacketChunk.cpp  RtpPacketChunk.hpp  RtpPacketSource.hpp  RtpPacketSourceCamera.hpp  RtpPacketSourceFactory.cpp  RtpPacketSourceFactory.hpp  RtpPacketSourceOv2640.cpp  RtpPacketSourceOv2640.hpp
components/rtsp/rtsp/: Media.cpp  Media.hpp  ResponseComposer.cpp  ResponseComposer.hpp  RtspConnection.cpp  RtspConnection.hpp  RtspRequestHandler.cpp  RtspRequestHandler.hpp  RtspServer.cpp  RtspServer.hpp
components/version/: CMakeLists.txt  Kconfig.projbuild  VersionParser.cpp  version.cpp  version.hpp  version.hpp.in
components/version/private_include/: VersionParser.hpp
components/wifi/: CMakeLists.txt  Kconfig.projbuild  get_ap_name_suffix.cpp  wifi.c  wifi.cpp  wifi.h
components/wifi/wifi/: Ap.cpp  Ap.hpp  DisconnectHandler.cpp  DisconnectHandler.hpp  Sta.cpp  Sta.hpp  Sub.hpp
docs/: README_RU.md  README_ru  comm_ru.md  dev_ru.md  refactoring_en.md  tools_ru.md  web_interface_ru.md
main/: CMakeLists.txt  main.cpp  partitions_large_one_ota.csv
sdkconfigs/: sdkconfig_pioneer_base  sdkconfig_salute
src/: CMakeLists.txt  main.cpp
test/: .gitignore  Makefile  README.md
test/stub/: CMakeLists.txt  Makefile  main.cpp
test/utility_test/: CMakeLists.txt  Makefile  OhDebug.hpp  main.cpp  utility
tools/: clear_binaries.sh  compose_fwpackage.sh  enable_bridge.sh  extract_binaries.sh  fastflash.sh  flash_device.sh  jlinkdebugserverstart.sh  zip_binaries.sh
(+361 files in other folders)
