idf_component_register(
	PRIV_REQUIRES
		sub
		utility
		mavlink
		sd_fat
		wifi_uart_bridge
	SRC_DIRS
		"."
		"priv_include/Microservice/"
		"priv_include/Helper"
		"priv_include"
		"include/mav"
	PRIV_INCLUDE_DIRS
		"priv_include"
	INCLUDE_DIRS
		"include"
	REQUIRES
		socket
		module
	PRIV_REQUIRES
		mbedtls
)
