idf_component_register(
	PRIV_REQUIRES
		buffered_file_transfer
		mavlink
		mbedtls
		sd_fat
		sub
		utility
		wifi_uart_bridge
	SRC_DIRS
		"."
		"priv_include/Microservice/"
		"priv_include/Helper"
		"priv_include"
		"include/mav"
	PRIV_INCLUDE_DIRS
		"priv_include"
	INCLUDE_DIRS
		"include"
	REQUIRES
		http
		module
		socket
)
