idf_component_register(
	PRIV_INCLUDE_DIRS
	INCLUDE_DIRS "."
	SRC_DIRS "."
)

set(MOSSE_PORTABLE ON CACHE BOOL "")
set(MOSSE_PORT_USE_CASSERT ON CACHE BOOL "")
set(MOSSE_PORT_ARROGANT_HOLD_FRAMES 0 CACHE STRING "")
set(MOSSE_MEM_CLONE_IMAGE_WORKING_AREA ON CACHE BOOL "")
set(MOSSE_MEM_CLONE_IMAGE_WORKING_AREA_SIDE_FRACTION 4 CACHE STRING "")
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/mosse EXCLUDE_FROM_ALL)
target_link_libraries(${COMPONENT_LIB} PUBLIC embmosse)
